- Security fixes
- Using of optimized version for bcopy, bzero, strcmp, strcpy, strncpy, strlcat, strlcpy, strlen, strncmp, memset and memcmp
- Replaced strcmp (deprecated and unsecure) by strncmp as far as possible
- Decided to keep ld_classic to keep the compatibility with the apple's compiler from snow leopard (xcode 3.x) to Mountain lion (xcode 4.5)  (in fact this has not changed since the last commit ;-) )

- Security fixes

- Few security fixes
- Fixed a serious bug in picopng
- Fixed a bug in gui.c, related to the images loading
- Fixed a bug with acpi, where no acpi table may be configured 

- Security fixes
- Updated smbus(spd.c) and radeon(ati.c) card list (taken from the last cosmo1t's update)

- Added two boot options for High resolution display and reboot on kernel panic

- Added fake_crt.c to fix a linker issue ... but it still dont work.
- Added minor changes to makeinc.dir

- Security fixes
- Added beta support for Xcode 4.4

- Added memory info to the nvidia plist structure, so now one can add several cards to the plist and set a customized name and memory info for each cards
- Implemented a method to inject new graphics cards from a plist, no need to hardcode device ids anymore !! (for now, only nvidia cards are supported, see doc/ModuleHelp.txt for usage)
- Moved the smbios detection code to the freebsd one

- Fixed a bug in the bundle dependency dispatcher

- security fixes in printf.c
- Fixed a weird bug in boot arguments that could prevent 10.8 to boot

- security, stability, bugs fixes
- moved __doprnt to the xnu version

- security and stability fixes
- Fixed a bug where prf may return a wrong string len (for ex : in the previous versions newStringWithformat("%02x%02x%02x%02x%02x%02x",101,117,104,113,103,100) may not return the entire string) 
- Fixed a bug in xml.c 
- Fixed a bug in device_inject.c (inspired from the dmazar's patch)


- security and stability fixes
- Removed useless codes in efistring modules