@@ -17,6 +17,7 @@ const char * getStringFromUUID(const EFI_CHAR8* uuid);
 EFI_CHAR8*  getUUIDFromString(const char *source);
 void *convertHexStr2Binary(const char *hexStr, int *outLength);
 uint32_t ascii_hex_to_int(char *buff);
+char * newStringFromURL(char* string);
 
 static inline uint16_t dp_swap16(uint16_t toswap)
 {
